2003-11-19  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.c (get_sectioning_number): do not append space
	with Docbook.
	(sectioning_underscore): insert label attribute to make
	distinction between chapter and unnumbered in Docbook.
	(handle_enum_increment): also increment for Docbook.

	* makeinfo/xml.c (xml_begin_index): remove label attribute from index
	element.

2003-11-18  Karl Berry  <karl@gnu.org>

	* cmds.c (command_table): new commands @deftypecv, @deftypecvx.
	* defun.c, insertion.[ch], xml.c: implement them.

2003-11-18  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (execute_string): better para handling in case
	of nested executions.

2003-11-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Multi-column Tables): include cmd name in
	section name.
	(Multitable Rows): use @headitem in example.

2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c (xml_begin_document): upgraded docbook DTD to Docbook
	XML 4.2.

	* makeinfo/makeinfo.c (cm_xref):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_insert_indexentry)
	(xml_begin_multitable): close previously open-tag-only elements.

2003-11-17  Karl Berry  <karl@gnu.org>

	* bootstrap: honor environment variables.

2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (execute_string): end paragraphs if
	executing @copying text with xml.

	* makeinfo/xml.c: disallow nested quotations, legalnotice in abstract,
	and samp in var with Docbook.

2003-11-17  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (begin_insertion): keep @copying state.
	use legalnotice instead of abstract for @copying.
	(cm_insert_copying): removed redundant work arounds.

	* makeinfo/makeinfo.c (execute_string): try to keep tags balanced with
	Docbook and xml.

	* makeinfo/xml.c
	(xml_current_stack_index, xml_end_current_element): new functions.
	(xml_add_char): enclose @copying text in a quotation element with
	Docbook.

2003-11-17  Alper Ersoy  <dirt@gtk.org>
